--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               within the shortest possible time.
             </p>
           </li>
-
+          git add .
           <li>
             <h3>Diligence</h3>
             <p>
