--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    /> 
+
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -104,32 +111,48 @@
 
         <ul>
           <li>
-            <img src="./images/img-2hm.jpg" alt="Banking App" />
+            <img src="./images/img-2hm.jpg" alt="Banking App" width="264" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/img(1)-2hm.jpg" alt="Cashless Payment" />
+            <img
+              src="./images/img(1)-2hm.jpg"
+              alt="Cashless Payment"
+              width="264"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img(4)-2hm.jpg" alt="Meditation App" />
+            <img
+              src="./images/img(4)-2hm.jpg"
+              alt="Meditation App"
+              width="264"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/img(2)-2hm.jpg" alt="Taxi Service" />
+            <img src="./images/img(2)-2hm.jpg" alt="Taxi Service" width="264" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img(3)-2hm.jpg" alt="Screen Illustrations" />
+            <img
+              src="./images/img(3)-2hm.jpg"
+              alt="Screen Illustrations"
+              width="264"
+            />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/img(5)-2hm.jpg" alt="Online Courses" />
+            <img
+              src="./images/img(5)-2hm.jpg"
+              alt="Online Courses"
+              width="264"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
