--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
- 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
@@ -22,7 +23,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo-text" href="./index.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
 
         <ul>
           <li><a href="#">Studio</a></li>
@@ -63,7 +66,7 @@
               within the shortest possible time.
             </p>
           </li>
- 
+
           <li>
             <h3>Diligence</h3>
             <p>
