Добавлена папка css с файлами стилей

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
         <ul class="nav-list">
           <li>
-            <a href="#" class="nav-link">Studio</a>
+            <a href="./index.html" class="nav-link">Studio</a>
+            <!-- Посилання на головну сторінку -->
           </li>
           <li>
             <a href="#" class="nav-link">Portfolio</a>
