Добавлена папка css с файлами стилей

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
 
         <ul class="nav-list">
           <li>
-            <a href="./index.html" class="nav-link">Studio</a>
-            <!-- Посилання на головну сторінку -->
+            <a href="./index.html" class="nav-linkone">Studio</a>
           </li>
           <li>
-            <a href="#" class="nav-link">Portfolio</a>
+            <a href="#" class="nav-linktwo">Portfolio</a>
           </li>
           <li>
-            <a href="#" class="nav-link">Contacts</a>
+            <a href="#" class="nav-linkthree">Contacts</a>
           </li>
         </ul>
       </nav>
