Добавлена папка css с файлами стилей

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 
         <ul class="nav-list">
           <li>
-            <a href="./index.html" class="nav-linkone">Studio</a>
+            <a href="./index.html" class="nav-link current">Studio</a>
           </li>
           <li>
-            <a href="#" class="nav-linktwo">Portfolio</a>
+            <a href="" class="nav-link">Portfolio</a>
           </li>
           <li>
-            <a href="#" class="nav-linkthree">Contacts</a>
+            <a href="" class="nav-link">Contacts</a>
           </li>
         </ul>
+        
       </nav>
 
       <address class="contact-link">
