--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <ul class="nav-list">
           <li>
-            <a href="./index.html" class="nav-link current">Studio</a>
+            <a href="./index.html" class="nav-link">Studio</a>
           </li>
           <li>
             <a href="" class="nav-link">Portfolio</a>
