--- a/index.html
+++ b/index.html
@@ -41,20 +41,17 @@
         </ul>
       </nav>
 
-      <address class="contact-link">
+      <address class="address-link">
         <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="contact-phone"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
+            <li>
+                <a href="mailto:info@devstudio.com" class="contact-mail">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+110001111111" class="contact-phone">+11 (000) 111-11-11</a>
+            </li>
         </ul>
-      </address>
+    </address>
+    
     </header>
 
     <main>
