--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-      <section>
+      <section  class="business">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
