--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main>
       <section  class="business">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
       <section>
         <h2>Features</h2>
