Добавлена папка css с файлами стилей

--- a/index.html
+++ b/index.html
@@ -43,20 +43,23 @@
 
       <address class="address-link">
         <ul>
-            <li>
-                <a href="mailto:info@devstudio.com" class="contact-mail">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+110001111111" class="contact-phone">+11 (000) 111-11-11</a>
-            </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="contact-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="contact-phone"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
-    </address>
-    
+      </address>
     </header>
 
     <main>
-      <section  class="business">
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="business">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <section>
