--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
+      <section class="team" >
+        <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
@@ -125,6 +125,8 @@
           </li>
         </ul>
       </section>
+
+
       <section>
         <h2>Our Portfolio</h2>
 
