--- a/index.html
+++ b/index.html
@@ -99,32 +99,32 @@
           </li>
         </ul>
       </section>
-
-      <section class="team" >
-        <h2 class="team-title">Our Team</h2>
+      <section class="team">
+        <h2 class="team-title">Mark Guerrero</h2>
         <ul>
-          <li>
+          <li class="team-member">
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member-title">Mark Guerrero</h3>
+            <p class="team-member-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member-title">Tom Ford</h3>
+            <p class="team-member-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member-title">Camila Garcia</h3>
+            <p class="team-member-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-member">
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member-title">Daniel Wilson</h3>
+            <p class="team-member-description">UI Designer</p>
           </li>
         </ul>
       </section>
+      
 
 
       <section>
