--- a/index.html
+++ b/index.html
@@ -99,34 +99,34 @@
           </li>
         </ul>
       </section>
-      <section class="team">
-        <h2 class="team-title">Mark Guerrero</h2>
+
+      <section class="team" >
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li class="team-member">
+          <li>
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="team-member-title">Mark Guerrero</h3>
-            <p class="team-member-description">Product Designer</p>
+            <h3 class = "team-name" >Mark Guerrero</h3>
+            <p class="team-decription" >Product Designer</p>
           </li>
-          <li class="team-member">
+          <li>
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team-member-title">Tom Ford</h3>
-            <p class="team-member-description">Frontend Developer</p>
+            <h3  class = "team-name" >Tom Ford</h3>
+            <p class="team-decription">Frontend Developer</p>
           </li>
-          <li class="team-member">
+          <li>
             <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="team-member-title">Camila Garcia</h3>
-            <p class="team-member-description">Marketing</p>
+            <h3  class = "team-name" >Camila Garcia</h3>
+            <p class="team-decription">Marketing</p>
           </li>
-          <li class="team-member">
+          <li>
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="team-member-title">Daniel Wilson</h3>
-            <p class="team-member-description">UI Designer</p>
+            <h3  class = "team-name" >Daniel Wilson</h3>
+            <p class="team-decription">UI Designer</p>
           </li>
         </ul>
       </section>
+
       
-
-
       <section>
         <h2>Our Portfolio</h2>
 
