--- a/index.html
+++ b/index.html
@@ -181,9 +181,10 @@
       </section>
     </main>
 
-    <footer>
-      <a href="/">WebStudio</a>
-      <p>
+    <footer class = "final">
+      <a class="final-text" href="./">
+        Web<span class="final-span">Studio</span>
+      <p class="final-decription" >
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
