--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
