--- a/index.html
+++ b/index.html
@@ -100,33 +100,32 @@
         </ul>
       </section>
 
-      <section class="team" >
+      <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class = "team-name" >Mark Guerrero</h3>
-            <p class="team-decription" >Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-decription">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3  class = "team-name" >Tom Ford</h3>
+            <h3 class="team-name">Tom Ford</h3>
             <p class="team-decription">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
-            <h3  class = "team-name" >Camila Garcia</h3>
+            <h3 class="team-name">Camila Garcia</h3>
             <p class="team-decription">Marketing</p>
           </li>
           <li>
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3  class = "team-name" >Daniel Wilson</h3>
+            <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-decription">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      
       <section>
         <h2>Our Portfolio</h2>
 
@@ -181,10 +180,11 @@
       </section>
     </main>
 
-    <footer class = "final">
+    <footer class="final">
       <a class="final-text" href="./">
         Web<span class="final-span">Studio</span>
-      <p class="final-decription" >
+      </a>
+      <p class="final-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
