--- a/index.html
+++ b/index.html
@@ -126,55 +126,55 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Portfolio</h2>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
 
         <ul>
           <li>
-            <img src="./images/img-2hm.jpg" alt="Banking App" width="264" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <img src="./images/img-2hm.jpg" alt="Banking App" width="360" />
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-decription">App</p>
           </li>
           <li>
             <img
               src="./images/img(1)-2hm.jpg"
               alt="Cashless Payment"
-              width="264"
+              width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-decription">Marketing</p>
           </li>
           <li>
             <img
               src="./images/img(4)-2hm.jpg"
               alt="Meditation App"
-              width="264"
+              width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-decription">App</p>
           </li>
           <li>
-            <img src="./images/img(2)-2hm.jpg" alt="Taxi Service" width="264" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <img src="./images/img(2)-2hm.jpg" alt="Taxi Service" width="360" />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-decription">Marketing</p>
           </li>
           <li>
             <img
               src="./images/img(3)-2hm.jpg"
               alt="Screen Illustrations"
-              width="264"
+              width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-decription">Design</p>
           </li>
           <li>
             <img
               src="./images/img(5)-2hm.jpg"
               alt="Online Courses"
-              width="264"
+              width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-decription">Marketing</p>
           </li>
         </ul>
       </section>
