--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </li>
           <li>
             <img
-              src="./images/img(1)-2hm.jpg"
+              src="./images/img1-2hm.jpg"
               alt="Cashless Payment"
               width="360"
             />
@@ -146,7 +146,7 @@
           </li>
           <li>
             <img
-              src="./images/img(4)-2hm.jpg"
+              src="./images/img4-2hm.jpg"
               alt="Meditation App"
               width="360"
             />
@@ -154,13 +154,13 @@
             <p class="portfolio-decription">App</p>
           </li>
           <li>
-            <img src="./images/img(2)-2hm.jpg" alt="Taxi Service" width="360" />
+            <img src="./images/img2-2hm.jpg" alt="Taxi Service" width="360" />
             <h3 class="portfolio-name">Taxi Service</h3>
             <p class="portfolio-decription">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img(3)-2hm.jpg"
+              src="./images/img3-2hm.jpg"
               alt="Screen Illustrations"
               width="360"
             />
@@ -169,7 +169,7 @@
           </li>
           <li>
             <img
-              src="./images/img(5)-2hm.jpg"
+              src="./images/img5-2hm.jpg"
               alt="Online Courses"
               width="360"
             />
