--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 
         <ul>
           <li>
-            <img src="./images/img-2hm.jpg" alt="Banking App" width="360" />
+            <img src="./images/img2hm.jpg" alt="Banking App" width="360" />
             <h3 class="portfolio-name">Banking App</h3>
             <p class="portfolio-decription">App</p>
           </li>
           <li>
             <img
-              src="./images/img1-2hm.jpg"
+              src="./images/img12hm.jpg"
               alt="Cashless Payment"
               width="360"
             />
@@ -146,7 +146,7 @@
           </li>
           <li>
             <img
-              src="./images/img4-2hm.jpg"
+              src="./images/img42hm.jpg"
               alt="Meditation App"
               width="360"
             />
@@ -154,13 +154,13 @@
             <p class="portfolio-decription">App</p>
           </li>
           <li>
-            <img src="./images/img2-2hm.jpg" alt="Taxi Service" width="360" />
+            <img src="./images/img22hm.jpg" alt="Taxi Service" width="360" />
             <h3 class="portfolio-name">Taxi Service</h3>
             <p class="portfolio-decription">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img3-2hm.jpg"
+              src="./images/img32hm.jpg"
               alt="Screen Illustrations"
               width="360"
             />
@@ -169,7 +169,7 @@
           </li>
           <li>
             <img
-              src="./images/img5-2hm.jpg"
+              src="./images/img52hm.jpg"
               alt="Online Courses"
               width="360"
             />
