--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-item">
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-decription">Product Designer</p>
