--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
@@ -13,10 +16,9 @@
       rel="stylesheet"
     />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -145,11 +147,7 @@
             <p class="portfolio-decription">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img42hm.jpg"
-              alt="Meditation App"
-              width="360"
-            />
+            <img src="./images/img42hm.jpg" alt="Meditation App" width="360" />
             <h3 class="portfolio-name">Meditation App</h3>
             <p class="portfolio-decription">App</p>
           </li>
@@ -168,11 +166,7 @@
             <p class="portfolio-decription">Design</p>
           </li>
           <li>
-            <img
-              src="./images/img52hm.jpg"
-              alt="Online Courses"
-              width="360"
-            />
+            <img src="./images/img52hm.jpg" alt="Online Courses" width="360" />
             <h3 class="portfolio-name">Online Courses</h3>
             <p class="portfolio-decription">Marketing</p>
           </li>
