--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       <address class="address-link">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="contact-mail"
+            <a href="mailto:info@devstudio.com" class="contact-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contact-phone"
+            <a href="tel:+110001111111" class="contact-link"
               >+11 (000) 111-11-11</a
             >
           </li>
