Добавлены картинки и обновлены стили

--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
-      <section>
-        <h2>Features</h2>
+
+
+      <section class="features">
+        <h2 class="features-title">Features</h2>
 
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class=" features-decription">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -78,7 +80,7 @@
 
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class=" features-decription">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
@@ -86,7 +88,7 @@
 
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class=" features-decription">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
@@ -94,7 +96,7 @@
 
           <li>
             <h3>Technologies</h3>
-            <p>
+            <p class=" features-decription">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
