Добавлены картинки и обновлены стили

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="features-item-title">Strategy</h3>
             <p class=" features-decription">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -79,7 +79,7 @@
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="features-item-title">Punctuality</h3>
             <p class=" features-decription">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -87,7 +87,7 @@
           </li>
 
           <li>
-            <h3>Diligence</h3>
+            <h3 class="features-item-title">Diligence</h3>
             <p class=" features-decription">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
@@ -95,7 +95,7 @@
           </li>
 
           <li>
-            <h3>Technologies</h3>
+            <h3 class="features-item-title">Technologies</h3>
             <p class=" features-decription">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
