--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
 
           <li>
-            <h3 class="features-item-title">Technologies</h3>
+            <h3 >Technologies</h3>
             <p class=" features-decription">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -103,32 +103,33 @@
           </li>
         </ul>
       </section>
-
+      
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul>
           <li class="team-item">
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-decription">Product Designer</p>
+            <p class="team-description">Product Designer</p> <!-- Перевірте, чи є правильний клас -->
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
             <h3 class="team-name">Tom Ford</h3>
-            <p class="team-decription">Frontend Developer</p>
+            <p class="team-description">Frontend Developer</p> <!-- Перевірте, чи є правильний клас -->
           </li>
           <li>
             <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
             <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-decription">Marketing</p>
+            <p class="team-description">Marketing</p> <!-- Перевірте, чи є правильний клас -->
           </li>
           <li>
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-decription">UI Designer</p>
+            <p class="team-description">UI Designer</p> <!-- Перевірте, чи є правильний клас -->
           </li>
         </ul>
       </section>
+      
 
       <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
