--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
 
           <li>
-            <h3 >Technologies</h3>
+            <h3 class="features-item-title" >Technologies</h3>
             <p class=" features-decription">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -103,7 +103,7 @@
           </li>
         </ul>
       </section>
-      
+
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul>
