--- a/index.html
+++ b/index.html
@@ -67,42 +67,40 @@
 
 
       <section class="features">
-        <h2 class="features-title">Features</h2>
-
+        <h2 class="features-heading">Features</h2>
+      
         <ul>
           <li>
             <h3 class="features-title">Strategy</h3>
-            <p class="features-decription">
+            <p class="features-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-
           <li>
             <h3 class="features-title">Punctuality</h3>
-            <p class="features-decription">
+            <p class="features-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-
           <li>
             <h3 class="features-title">Diligence</h3>
-            <p class="features-decription">
+            <p class="features-description">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-
           <li>
-            <h3 class="features-title" >Technologies</h3>
-            <p class="features-decription">
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
+      
 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
