--- a/index.html
+++ b/index.html
@@ -107,25 +107,21 @@
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-description">Product Designer</p>
-            <!-- Перевірте, чи є правильний клас -->
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-description">Frontend Developer</p>
-            <!-- Перевірте, чи є правильний клас -->
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-description">Marketing</p>
-            <!-- Перевірте, чи є правильний клас -->
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-description">UI Designer</p>
-            <!-- Перевірте, чи є правильний клас -->
           </li>
         </ul>
       </section>
